# grinder-server

./: README.md  __init__.py  filter_files.py  grinder-server.sh  pyproject.toml  setup.py
client/: grelion.sh  grinder.sh  package.json
client/public/: browse.html  index.html
client/public/css/: filechooser.css  gimmick.css  grinder.css
client/src/: browse.js  common.js  debug.js  dom.js  filter.js  history.js  job.js  main.js  polynomial.js  widget.js  ws_client.js
client/src/baseline/: build.sh  goldindec.js  imodpoly.js  loess.js  poly.js
client/src/io/: star_reader.js
client/src/menus/: menu.js  menu_class2d.js  menu_class3d.js  menu_class3d.js.old  menu_common.js  menu_ctf.js  menu_ctffind.js  menu_enhancer.js  menu_extract.js  menu_helix.js  menu_import.js  menu_initmodel.js  menu_localres.js  menu_metrics.js  menu_motioncor.js  menu_picking.js  menu_polish.js  menu_post.js  menu_rec3d.js  menu_refine.js  menu_refine.js.old  menu_tomo.js  menu_tools.js
doc/: index.html  index_gen.html  index_proto.html
doc/css/: gimmick.css
grelion/: gimmick.sh
grelion/server/: gm_init.py  grelion.py  normalize.py  spc_file.py  star_reader.py  wip_file.py
grelion/server/io/: README.md  StarReader.py  wip.py  wipData.py  wipTransform.py  wipUtils.py
server/: README_py.md  gm_init.py  gr_browse.py  gr_jobs.py  grelion.py  grinder.py  star_gate.py  star_reader.py
server/io/star/: star_tokenizer.py
server/star/: __init__.py  star_common.py  star_parser.py  star_tokenizer.py
src/: README.md  __init__.py  grinder-server.py  grinder.py.old
src/grinder/: main.py
src/grinder/apps/: import.py  motioncorr.py  server.py  template.py
src/grinder/core/: gr_browse.py  gr_init.py  graphics.py  log.py  utils.py
src/grinder_server/: gr_jobs.py  main.py  tree.py  utils.py
src/io/: __init__.py
src/io/star/: __init__.py
src/star/: __init__.py  star_parser.py
test/Example_baseline_cosmic/: README.md  Spectra_visu.html  app.py
test/Example_baseline_cosmic/src/js/: common.js  global_fun.js  main.js  (+1 more)
test/Simple server/: README.md  app.py  interface.html  main.js  random_file.py
(+14 files in other folders)
