[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grinder-server"
version = "0.1.0"
authors = [{name = "Jean-Christophe Taveau", email = "you@example.com"}]
readme = "README.md"
license = "GPL-3.0-or-later"
description = "A FastAPI package for file tree and websockets"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
# This creates a command line tool, e.g., 'start-my-server'
grinder-server = "grinder_server.main:run_server"